# ppss

./: .gitignore  LICENSE  README.md  pyproject.toml
ppss/: __init__.py  ppss.py
tests/: test_ppss.py
